# auto_games

./: README.md  pyproject.toml
auto_games/: adb_utils.py  smp_main.py  soa_main.py
